tests/negative/gold/conflicting1_test.gold
tests/negative/conflicting1_test.toit:6:1: error: Redefinition of 'foo'
foo := 2
^~~
tests/negative/conflicting1_test.toit:3:1: note: First definition of 'foo'
foo:
^~~
Compilation failed.
